[gd_scene load_steps=11 format=3 uid="uid://b3wna8uthuaxi"]

[ext_resource type="Script" path="res://Scenes/content.gd" id="1_187lu"]
[ext_resource type="Texture2D" uid="uid://b88q85n6efn3m" path="res://assets/sprites/menus/content_logo.png" id="1_u1lyp"]
[ext_resource type="PackedScene" uid="uid://ca6t2npqgkmel" path="res://assets/objects/menus/button.tscn" id="2_40vpt"]
[ext_resource type="Texture2D" uid="uid://crui24dx1g8bn" path="res://assets/sprites/menus/contnet_graphics.png" id="3_hif5w"]
[ext_resource type="Texture2D" uid="uid://ndmes3y60d5m" path="res://assets/sprites/menus/contnet_music.png" id="4_nhw1u"]
[ext_resource type="Texture2D" uid="uid://coac2shjfhree" path="res://assets/sprites/menus/content_sound.png" id="5_7u6yu"]
[ext_resource type="Texture2D" uid="uid://dgxkr6godii8g" path="res://assets/sprites/menus/button_back.png" id="6_drpeh"]
[ext_resource type="Texture2D" uid="uid://c5d3yo4ybcknn" path="res://assets/sprites/menus/content_frisk.png" id="8_ql4fo"]
[ext_resource type="AudioStream" uid="uid://tcqe20u04t68" path="res://assets/sounds/snd_select.wav" id="8_ybmfk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yy4ho"]
bg_color = Color(0, 0, 0, 1)

[node name="Content" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_187lu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yy4ho")

[node name="VFlowContainer" type="HFlowContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="Panel/VFlowContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/VFlowContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("1_u1lyp")

[node name="GridContainer" type="GridContainer" parent="Panel/VFlowContainer/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="CenterContainer" type="CenterContainer" parent="Panel/VFlowContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_Graphics" parent="Panel/VFlowContainer/VBoxContainer/GridContainer/CenterContainer" instance=ExtResource("2_40vpt")]
layout_mode = 2
texture = ExtResource("3_hif5w")
Animation_Type = 1

[node name="CenterContainer2" type="CenterContainer" parent="Panel/VFlowContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_Music" parent="Panel/VFlowContainer/VBoxContainer/GridContainer/CenterContainer2" instance=ExtResource("2_40vpt")]
layout_mode = 2
texture = ExtResource("4_nhw1u")
Animation_Type = 1

[node name="CenterContainer3" type="CenterContainer" parent="Panel/VFlowContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_Sounds" parent="Panel/VFlowContainer/VBoxContainer/GridContainer/CenterContainer3" instance=ExtResource("2_40vpt")]
layout_mode = 2
texture = ExtResource("5_7u6yu")
Animation_Type = 1

[node name="CenterContainer4" type="CenterContainer" parent="Panel/VFlowContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_Back" parent="Panel/VFlowContainer/VBoxContainer/GridContainer/CenterContainer4" instance=ExtResource("2_40vpt")]
layout_mode = 2
texture = ExtResource("6_drpeh")
Animation_Type = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/VFlowContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -6

[node name="ColorRect" type="ColorRect" parent="Panel/VFlowContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 0

[node name="Graphics" type="MarginContainer" parent="Panel/VFlowContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
theme_override_constants/margin_top = -8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VFlowContainer/Graphics"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="GridContainer" type="GridContainer" parent="Panel/VFlowContainer/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Graphics/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "название"
horizontal_alignment = 1

[node name="Author" type="Label" parent="Panel/VFlowContainer/Graphics/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "автор"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Graphics/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "источник"
horizontal_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="Panel/VFlowContainer/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VFlowContainer/Graphics/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("8_ql4fo")
stretch_mode = 4

[node name="Author" type="Label" parent="Panel/VFlowContainer/Graphics/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "TobyFox"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Graphics/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Undertale"
horizontal_alignment = 1

[node name="GridContainer3" type="GridContainer" parent="Panel/VFlowContainer/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title" type="Label" parent="Panel/VFlowContainer/Graphics/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Остальная графика"
horizontal_alignment = 1

[node name="Author" type="Label" parent="Panel/VFlowContainer/Graphics/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Dorotos
"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Graphics/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "PWTale"
horizontal_alignment = 1

[node name="Music" type="MarginContainer" parent="Panel/VFlowContainer"]
visible = false
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
theme_override_constants/margin_top = -8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VFlowContainer/Music"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="GridContainer" type="GridContainer" parent="Panel/VFlowContainer/Music/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "название"
horizontal_alignment = 1

[node name="Author" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "автор"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "источник"
horizontal_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="Panel/VFlowContainer/Music/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "JETPACK HELLRIDE (MEGALOVANIA, but it's Jetpack Joyride)"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "SixtyTunes"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "YouTube: SixtyTunes"
horizontal_alignment = 1
autowrap_mode = 3

[node name="GridContainer3" type="GridContainer" parent="Panel/VFlowContainer/Music/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Determination"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "TobyFox"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Undertale"
horizontal_alignment = 1
autowrap_mode = 3

[node name="GridContainer4" type="GridContainer" parent="Panel/VFlowContainer/Music/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Once upon a time"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "TobyFox"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Undertale"
horizontal_alignment = 1
autowrap_mode = 3

[node name="GridContainer5" type="GridContainer" parent="Panel/VFlowContainer/Music/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Last goodbye"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "TobyFox"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Undertale"
horizontal_alignment = 1
autowrap_mode = 3

[node name="GridContainer6" type="GridContainer" parent="Panel/VFlowContainer/Music/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer6"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "The Lost Song"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer6"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "The Cat Empire"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Music/VBoxContainer/GridContainer6"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "YouTube: The Cat Empire"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Sounds" type="MarginContainer" parent="Panel/VFlowContainer"]
visible = false
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
theme_override_constants/margin_top = -8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VFlowContainer/Sounds"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="GridContainer" type="GridContainer" parent="Panel/VFlowContainer/Sounds/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "название"
horizontal_alignment = 1

[node name="Author" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "автор"
horizontal_alignment = 1

[node name="Source" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "источник"
horizontal_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="Panel/VFlowContainer/Sounds/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Dispenser shoot sound"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Mojang AB"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Source" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Minecraft"
horizontal_alignment = 1
autowrap_mode = 3

[node name="GridContainer3" type="GridContainer" parent="Panel/VFlowContainer/Sounds/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Chicken egg"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Mojang AB"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Source" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Minecraft"
horizontal_alignment = 1
autowrap_mode = 3

[node name="GridContainer4" type="GridContainer" parent="Panel/VFlowContainer/Sounds/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Undertale sounds"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "TobyFox"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Source" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Undertale"
horizontal_alignment = 1
autowrap_mode = 3

[node name="GridContainer5" type="GridContainer" parent="Panel/VFlowContainer/Sounds/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Title2" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Прочие звуки"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Dorotos"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Source" type="Label" parent="Panel/VFlowContainer/Sounds/VBoxContainer/GridContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "PWTale"
horizontal_alignment = 1
autowrap_mode = 3

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ybmfk")
bus = &"Effects"
